# src/main/java/com/ravijar/petstore/model/CartItemView.java
@@ -1,0 +1,10 @@
+package com.ravijar.petstore.model;
+
+import lombok.Data;
+
+@Data
+public class CartItemView {
+    private String id;
+    private String petName;
+    private int quantity;
+}
